# peba1

./: CMakeLists.txt  README.md
include/: Client.h  Math.h
src/: Client.cpp  Math.cpp  main.cpp  test.cpp  test_dinn.cpp
